# PerceptionMonitoring

./: .gitignore  LICENSE  README.md  WORKSPACE  build.sh  pyproject.toml
configs/: dataset_obstacle_detection_with_mismatch_type.yaml  dataset_obstacle_detection_without_mismatch_type.yaml  debug.gin  dfg_dummy.yaml  dfg_obstacle_detection_without_mismatch_type copy.yaml  dfg_obstacle_detection_without_mismatch_type.yaml  sys_dummy.yaml  sys_obstacle_detection_without_mismatch.yaml  train_factor_graph.gin  train_gcn.gin  train_gcn2.gin  train_gin.gin  train_sage.gin  train_with_modules.gin  train_without_modules.gin
diagnosability/: __init__.py  base.py  bayesian_mle.py  deterministic_diagnostic_graph.py  diagnostic_factor_graph.py  diagnostic_graph_utils.py  diagnostic_junction_tree.py  evaluator.py  examples.py  factors.py  fault_identification.py  hyperdiagnosable.py  mle.py  perception_system.py  percival_adapter.py  standard_tests.py  temporal_diagnostic_graph.py  utils.py
docs/: verification_datasets.md
docs/percival/: tests.md
tools/: baseline.py  dataset_evaluator.py  deterministic.py  evaluate.py  evaluation_utils.py  fault_detection.py  fault_identification.py  gen_sankey.py  postprocess_dataset.sh  postprocessor.py  preprocess_dataset.sh  preprocessor.py  timing.csv.py  train_factor_graph.py  train_gnn.py  trainall.sh  utils.py
visualization/: bag.py  config.yaml  config_alt_both.yaml  config_alt_fmodes.yaml  config_alt_tests.yaml  detection_fig.py  dummy.py  gnn_params.py  pac.fig.py  prtables.tex.py  roc.fig.py  tables.tex.py  test.fig.py  utils.py
(+59 files in other folders)
